<?xml version="1.0"?>
<package format="2">
  <name>rcl</name>
  <version>0.0.0</version>
  <description>The ROS client library common implementation.
    This package contains an API which builds on the ROS middleware API and is optionally built upon by the other ROS client libraries.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rmw</build_depend>
  <!-- This ensures the rmw impls are built first. -->
  <build_depend>rmw_implementation</build_depend>

  <build_export_depend>rmw</build_export_depend>

  <depend>rcl_interfaces</depend>
  <depend>rosidl_generator_c</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
