<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcl</name>
  <version>0.0.0</version>
  <description>The ROS client library common implementation.
    This package contains an API which builds on the ROS middleware API and is optionally built upon by the other ROS client libraries.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_export_depend>rmw</build_export_depend>

  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rosidl_generator_c</build_depend>

  <build_export_depend>rcl_interfaces</build_export_depend>
  <build_export_depend>rcutils</build_export_depend>
  <build_export_depend>rosidl_generator_c</build_export_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rmw_implementation</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rmw</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
