<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcl_executor</name>
  <version>0.0.0</version>
  <description>Package containing ROS Executors for the use of rcl as ROS 2 C API.</description>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>rcutils</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>rcutils</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
